Added migration for user group Just a first draft of #805

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -178,6 +178,8 @@ fos_user:
     db_driver: orm
     firewall_name: secured_area
     user_class: Wallabag\UserBundle\Entity\User
+    group:
+        group_class: Wallabag\UserBundle\Entity\Group
     registration:
         confirmation:
             enabled: "%fosuser_confirmation%"
