--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -179,7 +179,7 @@ fos_user:
     firewall_name: secured_area
     user_class: Wallabag\UserBundle\Entity\User
     group:
-        group_class: Wallabag\UserBundle\Entity\Group
+        group_class: Wallabag\GroupBundle\Entity\Group
     registration:
         confirmation:
             enabled: "%fosuser_confirmation%"
