--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ cache:
         - vendor
         - $HOME/.composer/cache
         - node_modules
-        - $HOME/.cache/bower
         - $HOME/.npm
 
 php:
@@ -59,9 +58,9 @@ before_script:
     - if [[ $DB = pgsql ]]; then psql -c 'create database wallabag_test;' -U postgres; fi;
 
 install:
-    - if [[ $ASSETS = build ]]; then source ~/.nvm/nvm.sh && nvm install 6.7; fi;
-    - if [[ $ASSETS = build ]]; then npm install -g npm@latest; fi;
-    - if [[ $ASSETS = build ]]; then npm install; fi;
+    - if [[ $ASSETS = build ]]; then source ~/.nvm/nvm.sh && nvm install 6.10; fi;
+    - if [[ $ASSETS = build ]]; then npm install -g yarn@latest; fi;
+    - if [[ $ASSETS = build ]]; then yarn install; fi;
 
 before_install:
     - if [[ $TRAVIS_REPO_SLUG = wallabag/wallabag ]]; then cp .composer-auth.json ~/.composer/auth.json; fi;
