Add client_credentials as grant_type
Therefore, username and password are no longer needed

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

Allow to have global clients, auth through direct token or auth code and bring scopes

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

fix review

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

remove redirect uri requirement on specific clients

add back password and depreciate it

enforce state

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

Allow apps to register themselves

A handful of changes

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

change timeout values

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

set access_token lifetime to 1 year and double for refresh_token

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -44,6 +44,9 @@ fos_user:
 fos_oauth_server_token:
     resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
 
+fos_oauth_server_authorize:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
+
 craue_config_settings_modify:
     path: /settings
     defaults:
