--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,42 @@ framework:
     http_method_override: true
     assets: ~
 
+wallabag_core:
+    version: 2.2.3
+    paypal_url: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9UBA65LG3FX9Y&lc=gb"
+    languages:
+        en: 'English'
+        fr: 'Français'
+        de: 'Deutsch'
+        tr: 'Türkçe'
+        fa: 'فارسی'
+        ro: 'Română'
+        pl: 'Polish'
+        da: 'Dansk'
+        es: 'Español'
+        oc: 'Occitan'
+        it: 'Italiano'
+        pt: 'Português'
+    items_on_page: 12
+    theme: material
+    language: '%locale%'
+    rss_limit: 50
+    reading_speed: 1
+    cache_lifetime: 10
+    action_mark_as_read: 1
+    list_mode: 0
+    fetching_error_message_title: 'No title found'
+    fetching_error_message: |
+        wallabag can't retrieve contents for this article. Please <a href="http://doc.wallabag.org/en/user/errors_during_fetching.html#how-can-i-help-to-fix-that">troubleshoot this issue</a>.
+    api_limit_mass_actions: 10
+
+wallabag_user:
+    registration_enabled: "%fosuser_registration%"
+
+wallabag_import:
+    allow_mimetypes: ['application/octet-stream', 'application/json', 'text/plain', 'text/csv']
+    resource_dir: "%kernel.root_dir%/../web/uploads/import"
+
 # Twig Configuration
 twig:
     debug: "%kernel.debug%"
@@ -194,7 +230,11 @@ fos_oauth_server:
     service:
         user_provider: fos_user.user_provider.username_email
         options:
-            refresh_token_lifetime: 1209600
+            access_token_lifetime: 31536000
+            refresh_token_lifetime: 63072000
+            supported_scopes: read write user
+            enforce_state: true
+            auth_code_lifetime: 60
 
 scheb_two_factor:
     trusted_computer:
