Use npm script instead of direct webpack call
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,4 +73,4 @@ script:
     - if [[ $VALIDATE_TRANSLATION_FILE = run ]]; then php bin/console lint:yaml src/Wallabag/CoreBundle/Resources/translations -v ; fi;
     - if [[ $VALIDATE_TRANSLATION_FILE = run ]]; then php bin/console lint:yaml app/Resources/CraueConfigBundle/translations -v ; fi;
     - if [[ $VALIDATE_TRANSLATION_FILE = run ]]; then php bin/console lint:yaml src/Wallabag/UserBundle/Resources/translations -v ; fi;
-    - if [[ $ASSETS = build ]]; then ./node_modules/webpack/bin/webpack.js; fi;
+    - if [[ $ASSETS = build ]]; then yarn run build:prod; fi;
