--- a/web/bundles/wallabagcore/manifest.json
+++ b/web/bundles/wallabagcore/manifest.json
@@ -61,6 +61,7 @@
   "img/carrot-icon--white.png": "img/carrot-icon--white.png",
   "img/diaspora-icon--black.png": "img/diaspora-icon--black.png",
   "img/list.png": "img/list.png",
+  "img/scuttle.png": "img/scuttle.png",
   "img/shaarli.png": "img/shaarli.png",
   "img/table.png": "img/table.png",
   "img/unmark-icon--black.png": "img/unmark-icon--black.png",
