Cache yarn cache in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
         - $HOME/.composer/cache
         - node_modules
         - $HOME/.npm
+        - $HOME/.yarn-cache
 
 php:
     - 5.6
