--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
         "javibravo/simpleue": "^1.0",
         "symfony/dom-crawler": "^3.1",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "bdunogier/guzzle-site-authenticator": "dev-master"
+        "bdunogier/guzzle-site-authenticator": "1.0.0-beta1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "~2.2",
