--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ before_install:
     - if [[ $TRAVIS_REPO_SLUG = wallabag/wallabag ]]; then cp .composer-auth.json ~/.composer/auth.json; fi;
 
 script:
-    - travis_wait bash composer install -o  --no-interaction --no-progress --prefer-dist
+    - travis_wait composer update --no-interaction --no-progress
     - ant prepare-$DB
     - if [[ $VALIDATE_TRANSLATION_FILE = '' ]]; then ./bin/simple-phpunit -v ; fi;
     - if [[ $CS_FIXER = run ]]; then php bin/php-cs-fixer fix src/ --verbose --dry-run ; fi;
