--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,7 +20,7 @@ parameters:
     database_path: null
     database_table_prefix: wallabag_
     database_socket: null
-    # with PostgreSQL and SQLite, you can set "utf8"
+    # with PostgreSQL and SQLite, you must set "utf8"
     database_charset: utf8mb4
 
     mailer_transport: smtp
