--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,6 +23,8 @@ parameters:
     # with PostgreSQL and SQLite, you must set "utf8"
     database_charset: utf8mb4
 
+    domain_name: wallabag.me
+
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
