Use a dedicated file for wallabag config

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: wallabag.yml }
 
 parameters:
     # Allows to use the live reload feature for changes in assets
@@ -33,171 +34,6 @@ framework:
     fragments: ~
     http_method_override: true
     assets: ~
-
-wallabag_core:
-    version: 2.2.3
-    paypal_url: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9UBA65LG3FX9Y&lc=gb"
-    languages:
-        en: 'English'
-        fr: 'Français'
-        de: 'Deutsch'
-        tr: 'Türkçe'
-        fa: 'فارسی'
-        ro: 'Română'
-        pl: 'Polish'
-        da: 'Dansk'
-        es: 'Español'
-        oc: 'Occitan'
-        it: 'Italiano'
-        pt: 'Português'
-    items_on_page: 12
-    theme: material
-    language: '%locale%'
-    rss_limit: 50
-    reading_speed: 1
-    cache_lifetime: 10
-    action_mark_as_read: 1
-    list_mode: 0
-    fetching_error_message_title: 'No title found'
-    fetching_error_message: |
-        wallabag can't retrieve contents for this article. Please <a href="http://doc.wallabag.org/en/user/errors_during_fetching.html#how-can-i-help-to-fix-that">troubleshoot this issue</a>.
-    api_limit_mass_actions: 10
-    default_internal_settings:
-        -
-            name: share_public
-            value: 1
-            section: entry
-        -
-            name: carrot
-            value: 1
-            section: entry
-        -
-            name: share_diaspora
-            value: 1
-            section: entry
-        -
-            name: diaspora_url
-            value: http://diasporapod.com
-            section: entry
-        -
-            name: share_unmark
-            value: 1
-            section: entry
-        -
-            name: unmark_url
-            value: https://unmark.it
-            section: entry
-        -
-            name: share_shaarli
-            value: 1
-            section: entry
-        -
-            name: share_scuttle
-            value: 1
-            section: entry
-        -
-            name: shaarli_url
-            value: http://myshaarli.com
-            section: entry
-        -
-            name: scuttle_url
-            value: http://scuttle.org
-            section: entry
-        -
-            name: share_mail
-            value: 1
-            section: entry
-        -
-            name: share_twitter
-            value: 1
-            section: entry
-        -
-            name: show_printlink
-            value: 1
-            section: entry
-        -
-            name: restricted_access
-            value: 0
-            section: entry
-        -
-            name: export_epub
-            value: 1
-            section: export
-        -
-            name: export_mobi
-            value: 1
-            section: export
-        -
-            name: export_pdf
-            value: 1
-            section: export
-        -
-            name: export_csv
-            value: 1
-            section: export
-        -
-            name: export_json
-            value: 1
-            section: export
-        -
-            name: export_txt
-            value: 1
-            section: export
-        -
-            name: export_xml
-            value: 1
-            section: export
-        -
-            name: import_with_redis
-            value: 0
-            section: import
-        -
-            name: import_with_rabbitmq
-            value: 0
-            section: import
-        -
-            name: piwik_enabled
-            value: 0
-            section: analytics
-        -
-            name: piwik_host
-            value: v2.wallabag.org
-            section: analytics
-        -
-            name: piwik_site_id
-            value: 1
-            section: analytics
-        -
-            name: demo_mode_enabled
-            value: 0
-            section: misc
-        -
-            name: demo_mode_username
-            value: wallabag
-            section: misc
-        -
-            name: download_images_enabled
-            value: 0
-            section: misc
-        -
-            name: wallabag_support_url
-            value: https://www.wallabag.org/pages/support.html
-            section: misc
-        -
-            name: wallabag_url
-            value: http://v2.wallabag.org
-            section: misc
-        -
-            name: api_user_registration
-            value: 0
-            section: api
-
-wallabag_user:
-    registration_enabled: "%fosuser_registration%"
-
-wallabag_import:
-    allow_mimetypes: ['application/octet-stream', 'application/json', 'text/plain', 'text/csv']
-    resource_dir: "%kernel.root_dir%/../web/uploads/import"
 
 # Twig Configuration
 twig:
