--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -195,7 +195,7 @@ services:
         arguments:
             - "@wallabag_core.entry.download_images.client"
             - "%kernel.root_dir%/../web/assets/images"
-            - '@=service(''craue_config'').get(''wallabag_url'')'
+            - '%wallabag_core.domain_name%'
             - "@logger"
 
     wallabag_core.entry.download_images.client:
