--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -129,6 +129,12 @@ services:
         calls:
             - [ setCrypto, [ "@wallabag_core.helper.crypto_proxy" ] ]
 
+    wallabag_core.notification_repository:
+        class: Wallabag\CoreBundle\Repository\NotificationRepository
+        factory: [ "@doctrine.orm.default_entity_manager", getRepository ]
+        arguments:
+            - WallabagCoreBundle:Notification
+
     wallabag_core.helper.entries_export:
         class: Wallabag\CoreBundle\Helper\EntriesExport
         arguments:
