Disallow html for templating formats
Using html template format will then put the html format in the allowed list for the api doc which we don’t want since the api doesn’t response for html format.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,7 +110,7 @@ fos_rest:
             epub: true
             mobi: true
         templating_formats:
-            html: true
+            html: false
         force_redirects:
             html: true
         failed_validation: HTTP_BAD_REQUEST
