--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,6 +45,7 @@ wallabag_core:
         oc: 'Occitan'
         it: 'Italiano'
         pt: 'Português'
+        ru: 'Русский'
     items_on_page: 12
     theme: material
     language: '%locale%'
