add Russian language

--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -14,6 +14,7 @@ wallabag_core:
         oc: 'Occitan'
         it: 'Italiano'
         pt: 'Português'
+        ru: 'Русский'
     items_on_page: 12
     theme: material
     language: '%locale%'
