Jump to Symfony 3.3 & update others deps
Also update tests urls

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -350,3 +350,10 @@ fos_js_routing:
         - howto
         - fos_user_security_logout
         - new
+
+jms_serializer:
+    handlers:
+        # to be removed if we switch to (default) ISO8601 datetime instead of ATOM
+        # see: https://github.com/schmittjoh/JMSSerializerBundle/pull/494
+        datetime:
+            default_format: "Y-m-d\\TH:i:sO" # ATOM
