--- a/app/config/parameters_test.yml
+++ b/app/config/parameters_test.yml
@@ -6,5 +6,5 @@ parameters:
     test_database_user: null
     test_database_password: null
     test_database_path: "%env(TEST_DATABASE_PATH)%"
-    env(TEST_DATABASE_PATH): "%kernel.root_dir%/../data/db/wallabag_test.sqlite"
+    env(TEST_DATABASE_PATH): "%kernel.project_dir%/data/db/wallabag_test.sqlite"
     test_database_charset: utf8
