--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -27,7 +27,7 @@ wallabag_core:
     fetching_error_message: |
         wallabag can't retrieve contents for this article. Please <a href="http://doc.wallabag.org/en/user/errors_during_fetching.html#how-can-i-help-to-fix-that">troubleshoot this issue</a>.
     api_limit_mass_actions: 10
-    encryption_key_path: "%kernel.root_dir%/../data/site-credentials-secret-key.txt"
+    encryption_key_path: "%kernel.project_dir%/data/site-credentials-secret-key.txt"
     default_internal_settings:
         -
             name: share_public
@@ -159,4 +159,4 @@ wallabag_user:
 
 wallabag_import:
     allow_mimetypes: ['application/octet-stream', 'application/json', 'text/plain', 'text/csv']
-    resource_dir: "%kernel.root_dir%/../web/uploads/import"
+    resource_dir: "%kernel.project_dir%/web/uploads/import"
