Update prod assets
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/web/bundles/wallabagcore/manifest.json
+++ b/web/bundles/wallabagcore/manifest.json
@@ -53,22 +53,36 @@
   "fonts/lato-thin-italic.woff2": "fonts/lato-thin-italic.woff2",
   "fonts/lato-thin.woff": "fonts/lato-thin.woff",
   "fonts/lato-thin.woff2": "fonts/lato-thin.woff2",
-  "img/Diaspora-asterisk.svg": "img/Diaspora-asterisk.svg",
   "img/annotator-glyph-sprite.png?embed": "img/annotator-glyph-sprite.png",
   "img/annotator-icon-sprite.png?embed": "img/annotator-icon-sprite.png",
-  "img/bg-select.png": "img/bg-select.png",
-  "img/carrot-icon--black.png": "img/carrot-icon--black.png",
-  "img/carrot-icon--white.png": "img/carrot-icon--white.png",
-  "img/diaspora-icon--black.png": "img/diaspora-icon--black.png",
-  "img/list.png": "img/list.png",
-  "img/scuttle.png": "img/scuttle.png",
-  "img/shaarli.png": "img/shaarli.png",
-  "img/table.png": "img/table.png",
-  "img/unmark-icon--black.png": "img/unmark-icon--black.png",
   "material.css": "material.css",
   "material.css.map": "material.css.map",
   "material.js": "material.js",
   "public.css": "public.css",
   "public.css.map": "public.css.map",
-  "public.js": "public.js"
+  "public.js": "public.js",
+  "themes/_global/img/appicon/apple-touch-icon-114.png": "themes/_global/img/appicon/apple-touch-icon-114.png",
+  "themes/_global/img/appicon/apple-touch-icon-120.png": "themes/_global/img/appicon/apple-touch-icon-120.png",
+  "themes/_global/img/appicon/apple-touch-icon-144.png": "themes/_global/img/appicon/apple-touch-icon-144.png",
+  "themes/_global/img/appicon/apple-touch-icon-152.png": "themes/_global/img/appicon/apple-touch-icon-152.png",
+  "themes/_global/img/appicon/apple-touch-icon-57.png": "themes/_global/img/appicon/apple-touch-icon-57.png",
+  "themes/_global/img/appicon/apple-touch-icon-72.png": "themes/_global/img/appicon/apple-touch-icon-72.png",
+  "themes/_global/img/appicon/apple-touch-icon-76.png": "themes/_global/img/appicon/apple-touch-icon-76.png",
+  "themes/_global/img/appicon/apple-touch-icon.png": "themes/_global/img/appicon/apple-touch-icon.png",
+  "themes/_global/img/appicon/favicon.ico": "themes/_global/img/appicon/favicon.ico",
+  "themes/_global/img/bg-select.png": "themes/_global/img/bg-select.png",
+  "themes/_global/img/icons/Diaspora-asterisk.svg": "themes/_global/img/icons/Diaspora-asterisk.svg",
+  "themes/_global/img/icons/carrot-icon--black.png": "themes/_global/img/icons/carrot-icon--black.png",
+  "themes/_global/img/icons/carrot-icon--white.png": "themes/_global/img/icons/carrot-icon--white.png",
+  "themes/_global/img/icons/diaspora-icon--black.png": "themes/_global/img/icons/diaspora-icon--black.png",
+  "themes/_global/img/icons/diaspora-icon--white.png": "themes/_global/img/icons/diaspora-icon--white.png",
+  "themes/_global/img/icons/scuttle.png": "themes/_global/img/icons/scuttle.png",
+  "themes/_global/img/icons/shaarli.png": "themes/_global/img/icons/shaarli.png",
+  "themes/_global/img/icons/unmark-icon--black.png": "themes/_global/img/icons/unmark-icon--black.png",
+  "themes/_global/img/list.png": "themes/_global/img/list.png",
+  "themes/_global/img/logo-other_themes.png": "themes/_global/img/logo-other_themes.png",
+  "themes/_global/img/logo-square.png": "themes/_global/img/logo-square.png",
+  "themes/_global/img/logo-w.png": "themes/_global/img/logo-w.png",
+  "themes/_global/img/logo-wallabag.svg": "themes/_global/img/logo-wallabag.svg",
+  "themes/_global/img/table.png": "themes/_global/img/table.png"
 }
