--- a/composer.json
+++ b/composer.json
@@ -66,8 +66,9 @@
         "simplepie/simplepie": "~1.5",
         "willdurand/hateoas-bundle": "~1.3",
         "liip/theme-bundle": "^1.4.6",
-        "lexik/form-filter-bundle": "^5.0",
-        "j0k3r/graby": "^1.0",
+        "lexik/form-filter-bundle": "^5.0.4",
+        "j0k3r/graby": "^2.0",
+        "php-http/guzzle5-adapter": "^2.0",
         "friendsofsymfony/user-bundle": "2.0.*",
         "friendsofsymfony/oauth-server-bundle": "^1.5",
         "stof/doctrine-extensions-bundle": "^1.2",
@@ -89,7 +90,8 @@
         "bdunogier/guzzle-site-authenticator": "^1.0.0",
         "defuse/php-encryption": "^2.1",
         "html2text/html2text": "^4.1",
-        "pragmarx/recovery": "^0.1.0"
+        "pragmarx/recovery": "^0.1.0",
+        "php-http/httplug-bundle": "^1.14"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "~3.0",
@@ -101,7 +103,9 @@
         "phpstan/phpstan": "^0.11.0",
         "phpstan/phpstan-phpunit": "^0.11.0",
         "phpstan/phpstan-symfony": "^0.11.0",
-        "phpstan/phpstan-doctrine": "^0.11.0"
+        "phpstan/phpstan-doctrine": "^0.11.0",
+        "php-http/mock-client": "^1.0",
+        "guzzlehttp/psr7": "^1.0"
     },
     "suggest": {
         "ext-imagick": "To keep GIF animation when downloading image is enabled"
