--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -42,7 +42,7 @@ services:
             -
                 error_message: '%wallabag_core.fetching_error_message%'
                 error_message_title: '%wallabag_core.fetching_error_message_title%'
-            - "@wallabag_core.guzzle.http_client"
+            - "@wallabag_core.http_client"
             - "@wallabag_core.graby.config_builder"
         calls:
             - [ setLogger, [ "@logger" ] ]
@@ -55,9 +55,8 @@ services:
             - {}
             - "@logger"
 
-    wallabag_core.guzzle.http_client:
-        class: GuzzleHttp\ClientInterface
-        factory: ["@wallabag_core.guzzle.http_client_factory", buildHttpClient]
+    wallabag_core.http_client:
+        alias: 'httplug.client.wallabag_core'
 
     wallabag_core.guzzle_authenticator.config_builder:
         class: Wallabag\CoreBundle\GuzzleSiteAuthenticator\GrabySiteConfigBuilder
@@ -73,7 +72,7 @@ services:
     bd_guzzle_site_authenticator.site_config_builder:
         alias: wallabag_core.guzzle_authenticator.config_builder
 
-    wallabag_core.guzzle.http_client_factory:
+    wallabag_core.http_client_factory:
         class: Wallabag\CoreBundle\Helper\HttpClientFactory
         arguments:
             - "@wallabag_core.guzzle.cookie_jar"
@@ -212,7 +211,7 @@ services:
             - "@logger"
 
     wallabag_core.entry.download_images.client:
-        class: GuzzleHttp\Client
+        alias: 'httplug.client.wallabag_core.entry.download_images'
 
     wallabag_core.helper.crypto_proxy:
         class: Wallabag\CoreBundle\Helper\CryptoProxy
