--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ script:
     - travis_wait bash composer install -o  --no-interaction --no-progress --prefer-dist
     - echo "travis_fold:start:prepare"
     - make prepare DB=$DB
-    - echo "travis_fold:start:prepare"
+    - echo "travis_fold:end:prepare"
 
     - echo "travis_fold:start:fixtures"
     - php bin/console doctrine:fixtures:load --no-interaction --env=test
