composer: update dependency versions to reduce memory footprint
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/composer.json
+++ b/composer.json
@@ -43,46 +43,46 @@
         "ext-iconv": "*",
         "ext-tokenizer": "*",
         "ext-pdo": "*",
-        "symfony/symfony": "3.3.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "twig/extensions": "~1.0",
-        "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^3.0",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "nelmio/cors-bundle": "~1.4",
+        "symfony/symfony": "~3.3.13",
+        "doctrine/orm": "^2.5.12",
+        "doctrine/doctrine-bundle": "^1.8.0",
+        "doctrine/doctrine-cache-bundle": "^1.3.2",
+        "twig/extensions": "^1.5.1",
+        "symfony/swiftmailer-bundle": "^2.6.7",
+        "symfony/monolog-bundle": "^3.1.2",
+        "sensio/distribution-bundle": "^5.0.21",
+        "sensio/framework-extra-bundle": "^3.0.28",
+        "incenteev/composer-parameter-handler": "^2.1.2",
+        "nelmio/cors-bundle": "~1.5",
         "friendsofsymfony/rest-bundle": "~2.1",
         "jms/serializer-bundle": "~2.2",
-        "nelmio/api-doc-bundle": "~2.7",
+        "nelmio/api-doc-bundle": "^2.13.2",
         "mgargano/simplehtmldom": "~1.5",
-        "wallabag/tcpdf": "^6.2",
+        "wallabag/tcpdf": "^6.2.15",
         "simplepie/simplepie": "~1.5",
-        "willdurand/hateoas-bundle": "~1.0",
-        "liip/theme-bundle": "~1.1",
-        "lexik/form-filter-bundle": "~5.0",
+        "willdurand/hateoas-bundle": "~1.3",
+        "liip/theme-bundle": "^1.4.6",
+        "lexik/form-filter-bundle": "^5.0.4",
         "j0k3r/graby": "^1.0",
-        "friendsofsymfony/user-bundle": "^2.0",
-        "friendsofsymfony/oauth-server-bundle": "^1.5",
+        "friendsofsymfony/user-bundle": "^2.0.1",
+        "friendsofsymfony/oauth-server-bundle": "^1.5.2",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "scheb/two-factor-bundle": "~2.0",
-        "grandt/phpepub": "~4.0",
+        "scheb/two-factor-bundle": "^2.14.0",
+        "grandt/phpepub": "^4.0.7",
         "wallabag/php-mobi": "~1.0.0",
         "kphoen/rulerz-bundle": "~0.13",
         "guzzlehttp/guzzle": "^5.3.1",
-        "doctrine/doctrine-migrations-bundle": "^1.0",
-        "paragonie/random_compat": "~2.0",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "paragonie/random_compat": "^2.0.11",
         "craue/config-bundle": "~2.0",
         "mnapoli/piwik-twig-extension": "^1.0",
-        "ocramius/proxy-manager": "1.*",
-        "white-october/pagerfanta-bundle": "^1.0",
-        "php-amqplib/rabbitmq-bundle": "^1.8",
-        "predis/predis": "^1.0",
+        "ocramius/proxy-manager": "^1.0.2",
+        "white-october/pagerfanta-bundle": "^1.1.0",
+        "php-amqplib/rabbitmq-bundle": "^1.14",
+        "predis/predis": "^1.1.1",
         "javibravo/simpleue": "^2.0",
-        "symfony/dom-crawler": "^3.1",
-        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "symfony/dom-crawler": "^3.3.13",
+        "friendsofsymfony/jsrouting-bundle": "^1.6.3",
         "bdunogier/guzzle-site-authenticator": "^1.0.0@dev",
         "defuse/php-encryption": "^2.1",
         "html2text/html2text": "^4.1"
