Added internal setting to enable/disable headers storage

--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -153,6 +153,10 @@ wallabag_core:
             name: api_user_registration
             value: 0
             section: api
+        -
+            name: store_article_headers
+            value: 0
+            section: entry
 
 wallabag_user:
     registration_enabled: "%fosuser_registration%"
