--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -5,6 +5,7 @@ wallabag_core:
         en: 'English'
         fr: 'Français'
         de: 'Deutsch'
+        th: 'ไทย'
         tr: 'Türkçe'
         fa: 'فارسی'
         ro: 'Română'
