Add craue setting to enable sharing of origin url to Shaarli
Also fix the field name used in the query string and add it to baggy
theme

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -158,6 +158,10 @@ wallabag_core:
             name: store_article_headers
             value: 0
             section: entry
+        -
+            name: shaarli_share_origin_url
+            value: 0
+            section: entry
 
 wallabag_user:
     registration_enabled: "%fosuser_registration%"
