--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "issues": "https://github.com/wallabag/wallabag/issues"
     },
     "require": {
-        "php": ">=5.6.0",
+        "php": "^7.1",
         "ext-pcre": "*",
         "ext-dom": "*",
         "ext-curl": "*",
@@ -47,6 +47,7 @@
         "doctrine/orm": "^2.5.12",
         "doctrine/doctrine-bundle": "^1.8.0",
         "doctrine/doctrine-cache-bundle": "^1.3.2",
+        "doctrine/annotations": "^1.6",
         "twig/extensions": "^1.5.1",
         "symfony/swiftmailer-bundle": "^2.6.7",
         "symfony/monolog-bundle": "^3.1.2",
@@ -132,7 +133,7 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "5.6.0"
+            "php": "7.1.0"
         }
     },
     "minimum-stability": "dev",
