--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ before_install:
     - if [[ $TRAVIS_REPO_SLUG = wallabag/wallabag ]]; then cp .composer-auth.json ~/.composer/auth.json; fi;
 
 script:
-    - travis_wait bash composer install -o  --no-interaction --no-progress --prefer-dist
+    - travis_wait composer update --no-interaction --no-progress
     - echo "travis_fold:start:prepare"
     - make prepare DB=$DB
     - echo "travis_fold:end:prepare"
