--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,7 @@ twig:
 doctrine:
     dbal:
         driver: "%database_driver%"
+        driver_class: "%database_driver_class%"
         host: "%database_host%"
         port: "%database_port%"
         dbname: "%database_name%"
