--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -23,6 +23,7 @@ swiftmailer:
 doctrine:
     dbal:
         driver: "%test_database_driver%"
+        driver_class: "%test_database_driver_class%"
         host: "%test_database_host%"
         port: "%test_database_port%"
         dbname: "%test_database_name%"
