--- a/app/config/tests/parameters_test.sqlite.yml
+++ b/app/config/tests/parameters_test.sqlite.yml
@@ -1,5 +1,6 @@
 parameters:
     test_database_driver: pdo_sqlite
+    test_database_driver_class: ~
     test_database_host: localhost
     test_database_port:
     test_database_name: ~
