Add secure email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,10 +79,13 @@ doctrine_migrations:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host: "%mailer_host%"
-    username: "%mailer_user%"
-    password: "%mailer_password%"
+    transport:   "%mailer_transport%"
+    username:    "%mailer_user%"
+    password:    "%mailer_password%"
+    host:        "%mailer_host%"
+    port:        "%mailer_port%"
+    encryption:  "%mailer_encryption%"
+    auth_mode:   "%mailer_auth_mode%"
     spool:
         type: memory
 
