Looked UserBundle again.
See https://github.com/FriendsOfSymfony/FOSUserBundle/compare/v2.0.2...v2.1.0#diff-8a79d0e62995dd549be4e463c35a8cc3

It generate an error about a variable called `registration_enabled` which can not be found.
So I guess we are in the case of “such usage” about BC in UserBundle. Don’t want to loose time finding how to fix it. Rollback to the working version.

--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
         "liip/theme-bundle": "^1.4.6",
         "lexik/form-filter-bundle": "^5.0.4",
         "j0k3r/graby": "^1.0",
-        "friendsofsymfony/user-bundle": "^2.0.1",
+        "friendsofsymfony/user-bundle": "2.0.*",
         "friendsofsymfony/oauth-server-bundle": "^1.5.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "scheb/two-factor-bundle": "^2.14.0",
