--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "annotator": "git://github.com/wallabag/annotator.git#0f076c7d371ed25eb0793346f46982d90f2c4c85",
     "hammerjs": "^2.0.8",
+    "highlight.js": "^9.12.0",
     "icomoon-free-npm": "^0.0.0",
     "jquery": "^2.1.4",
     "jquery.cookie": "^1.4.1",
