Card no preview replaced by wallabag logo

--- a/web/wallassets/manifest.json
+++ b/web/wallassets/manifest.json
@@ -81,7 +81,7 @@
   "themes/_global/img/icons/unmark-icon--black.png": "themes/_global/img/icons/unmark-icon--black.png",
   "themes/_global/img/list.png": "themes/_global/img/list.png",
   "themes/_global/img/logo-other_themes.png": "themes/_global/img/logo-other_themes.png",
-  "themes/_global/img/logo-square.png": "themes/_global/img/logo-square.png",
+  "themes/_global/img/logo-square.svg": "themes/_global/img/logo-square.svg",
   "themes/_global/img/logo-w.png": "themes/_global/img/logo-w.png",
   "themes/_global/img/logo-wallabag.svg": "themes/_global/img/logo-wallabag.svg",
   "themes/_global/img/table.png": "themes/_global/img/table.png"
